package system.model;

public enum QuizGroupType {
    CAT,
    SUBCAT,
    SUBSUBCAT
}
